dfir_rs/tests/compile-fail-stable/surface_loop_source.stderr
error: Source operator `source_iter(...)` must be at the root level, not within any `loop { ... }` contexts.
 --> tests/compile-fail-stable/surface_loop_source.rs:4:13
  |
4 |             source_iter(0..10) -> null();
  |             ^^^^^^^^^^^

error[E0599]: no method named `run_available_sync` found for unit type `()` in the current scope
 --> tests/compile-fail-stable/surface_loop_source.rs:7:8
  |
7 |     df.run_available_sync();
  |        ^^^^^^^^^^^^^^^^^^ method not found in `()`
